--- a/app/assets/javascripts/master/formatters.js.erb
+++ b/app/assets/javascripts/master/formatters.js.erb
@@ -1,4 +1,8 @@
 (function($) {
+
+  var REGEX_DATE = '(\\d{4})\\-(\\d{2})\\-(\\d{2})';    // 'yyyy-mm-dd'
+  var REGEX_TIME = '(\\d{2}):(\\d{2})';                 // 'hh:mm'
+
   var SlickFormatter = {
 
     ///////////////////////////////////////////////////////////////////////////
@@ -62,7 +66,9 @@
 
     // Display datetime info as 'dd/mm/yyyy hh:ms' format
     DateTimeFormatter: function(row, cell, value, columnDef, dataContext) {
-      value = convertDateTimeFormat(value);
+      if (value.match(new RegExp('^' + REGEX_DATE + '[ \\t]' + REGEX_TIME + '$'))) {
+        value = convertDateTimeFormat(value);
+      }
 
       if (value === null || value === "") {
         return "";
@@ -93,9 +99,6 @@
 
     // Convert datetime format to 'dd/mm/yyyy hh:ms'
     convertDateTimeFormat: function(dateTimeStr) {
-      var REGEX_DATE = '(\\d{4})\\-(\\d{2})\\-(\\d{2})';    // 'yyyy-mm-dd'
-      var REGEX_TIME = '(\\d{2}):(\\d{2})';                 // 'hh:mm'
-
       try {
         var matchedArr = dateTimeStr.match(new RegExp('^' + REGEX_DATE + '[ \\t]' + REGEX_TIME + '$'));
         return matchedArr[3] + '/' + matchedArr[2] + '/' + matchedArr[1] + ' ' + matchedArr[4] + ':' + matchedArr[5];
