FEATURE #64623 - Add support to use source option for belongs_to columns

--- a/app/assets/javascripts/master/formatters.js.erb
+++ b/app/assets/javascripts/master/formatters.js.erb
@@ -18,11 +18,14 @@
     ///////////////////////////////////////////////////////////////////////////
 
     BaseFormatter: function(row, cell, value, columnDef, dataContext) {
+      var source = columnDef.source;
       var optionTextAttribute = columnDef.optionTextAttribute;
       var inner_formatter = columnDef.inner_formatter;
 
       // Retrive info for relation columns
-      if (optionTextAttribute) {
+      if (source) {
+        value = value[source];
+      } else if (optionTextAttribute) {
         value = value[optionTextAttribute];
       }
 
