--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -15,44 +15,45 @@
             column_name = get_column_name(column)
             label = column.options[:form_label] || column.label
             _klass = model_name.classify
+            field = column.options[:through] || column.name
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}= label
             - if column.sql_type.to_s == 'belongs_to'
-              = form.select column_name,                            |
-                select_options(column),                             |
-                { include_blank: !column.presence_required? },      |
-                :class             => 'chzn-select',                |
-                :style             => "width:250px",                |
-                :disabled          => column.options[:auto_fill],   |
-                "data-required"    => column.presence_required?,    |
-                "data-text-attr"   => column.option_text_attribute, |
-                "data-target"      => "#{column_name}_target_flag", |
-                "data-column"       => column.name                  |
+              = form.select column_name,                                      |
+                select_options(column),                                       |
+                { include_blank: !column.presence_required? },                |
+                :class             => 'chzn-select',                          |
+                :style             => "width:250px",                          |
+                :disabled          => column.options[:auto_fill],             |
+                "data-required"    => column.presence_required?,              |
+                "data-source"      => column.source,                          |
+                "data-target"      => "#{column_name}_target_flag",           |
+                "data-field"       => field                                   |
 
             - elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many'
-              = form.select column.reflection.name.to_s,            |
-                select_options(column),                             |
-                { include_blank: !column.presence_required? },      |
-                :multiple          => true,                         |
-                :class             => 'chzn-select',                |
-                :style             => "width:250px",                |
-                "data-required"    => column.presence_required?,    |
-                "data-text-attr"   => column.option_text_attribute, |
-                "data-target"      => "#{column_name}_target_flag", |
-                "data-column"      => column.name,                  |
-                :disabled          => column.options[:auto_fill]    |
+              = form.select column.reflection.name.to_s,                       |
+                select_options(column),                                        |
+                { include_blank: !column.presence_required? },                 |
+                :multiple          => true,                                    |
+                :class             => 'chzn-select',                           |
+                :style             => "width:250px",                           |
+                "data-required"    => column.presence_required?,               |
+                "data-source"      => column.source,                           |
+                "data-target"      => "#{column_name}_target_flag",            |
+                "data-field"       => field,                                   |
+                :disabled          => column.options[:auto_fill]               |
 
             - elsif select_tag_field?(column)
-              = select_tag "#{model_name}[#{column_name}]",          |
-                select_tag_options(column),                          |
-                :style             => "width:250px",                 |
-                :class             => 'chzn-select',                 |
-                :disabled          => column.options[:auto_fill],    |
-                :include_blank     => !column.presence_required?,    |
-                "data-required"    => column.presence_required?,     |
-                "data-target"      => "#{column_name}_target_flag",  |
-                "data-text-attr"   => column.option_text_attribute,  |
-                "data-column"      => column.name                    |
+              = select_tag "#{model_name}[#{column_name}]",                   |
+                select_tag_options(column),                                   |
+                :style             => "width:250px",                          |
+                :class             => 'chzn-select',                          |
+                :disabled          => column.options[:auto_fill],             |
+                :include_blank     => !column.presence_required?,             |
+                "data-required"    => column.presence_required?,              |
+                "data-target"      => "#{column_name}_target_flag",           |
+                "data-source"      => column.source,                          |
+                "data-field"       => field                                   |
               - if column.options[:depend_column].present?
                 :javascript
                   $(function(){
@@ -70,7 +71,7 @@
                   });
 
             - elsif column.sql_type.to_s == 'string'
-              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-field" => field
 
               :javascript
                 var choices = "/wulin_master/fetch_distinct_options?"
@@ -93,16 +94,16 @@
                 carbonCopyNewEditor(args);
 
             - elsif column.options[:file]
-              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - elsif column.options[:password]
-              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - else
               - if column.sql_type.to_s.downcase == 'boolean'
-                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field
               - elsif column.sql_type.to_s.downcase == 'text'
-                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'
+                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 260px; height: 4em;'
               - else
-                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
+                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
             .field_error
       .submit
         %input.btn.success{:id => "#{grid.name}_submit", :name => "commit", :type => "submit", :value => " Create "}/
