--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -18,6 +18,7 @@
             column_name = get_column_name(column)
             label = column.options[:form_label] || column.label
             _klass = model_name.classify
+            field = column.options[:through] || column.name
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}
               = label
@@ -30,9 +31,9 @@
                 :style             => "width:250px",                |
                 :disabled          => column.options[:auto_fill],   |
                 "data-required"    => column.presence_required?,    |
-                "data-text-attr"   => column.option_text_attribute, |
+                "data-source"      => column.source,                |
                 "data-target"      => "#{column_name}_target_flag", |
-                "data-column"       => column.name                  |
+                "data-field"       => field                         |
 
             - elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many'
               = form.select column.reflection.name.to_s,            |
@@ -41,9 +42,9 @@
                 :multiple          => true,                         |
                 :style             => "width:250px",                |
                 "data-required"    => column.presence_required?,    |
-                "data-text-attr"   => column.option_text_attribute, |
+                "data-source"      => column.source,                |
                 "data-target"      => "#{column_name}_target_flag", |
-                "data-column"      => column.name,                  |
+                "data-field"       => field,                        |
                 :disabled          => column.options[:auto_fill]    |
               = clean_up_for(column)
 
@@ -55,8 +56,8 @@
                 :include_blank     => !required?(column),            |
                 "data-required"    => required?(column),             |
                 "data-target"      => "#{column_name}_target_flag",  |
-                "data-text-attr"   => column.option_text_attribute,  |
-                "data-column"      => column.name                    |
+                "data-source"      => column.source,                 |
+                "data-field"       => field                          |
               - if column.options[:depend_column].present?
                 :javascript
                   $(function(){
@@ -74,7 +75,7 @@
                   });
 
             - elsif column.sql_type.to_s == 'string'
-              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+              = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-field" => field
               :javascript
                 var choices = "/wulin_master/fetch_distinct_options?"
                                      + "column=#{column_name}"
@@ -96,18 +97,18 @@
                 carbonCopyNewEditor(args);
 
             - elsif column.options[:file]
-              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
               = clean_up_tag(column_name)
             - elsif column.options[:password]
-              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - else
               - if column.sql_type.to_s.downcase == 'boolean'
-                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field
                 = clean_up_for(column)
               - elsif column.sql_type.to_s.downcase == 'text'
-                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'
+                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 260px; height: 4em;'
               - else
-                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
+                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill],"data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
             .field_error
       .submit
         %input.btn.success.update_btn{:id => "#{grid.name}_batch_update", :name => "commit", :type => "submit", :value => "  Update  "}/
