--- a/app/views/option_new_form.html.haml
+++ b/app/views/option_new_form.html.haml
@@ -11,6 +11,7 @@
           :ruby
             column_name = get_column_name(column)
             label = column.options[:form_label] || column.label
+            field = column.options[:through] || column.name
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}= label
             - if column.sql_type.to_s == 'belongs_to'
@@ -21,9 +22,9 @@
                 :style             => "width:250px",                |
                 :disabled          => column.options[:auto_fill],   |
                 "data-required"    => column.presence_required?,    |
-                "data-text-attr"   => column.option_text_attribute, |
+                "data-source"      => column.source,                |
                 "data-target"      => "#{column_name}_target_flag", |
-                "data-column"       => column.name                  |
+                "data-field"       => field                         |
 
             - elsif column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many'
               = form.select column.reflection.name.to_s,            |
@@ -33,9 +34,9 @@
                 :class             => 'chzn-select',                |
                 :style             => "width:250px",                |
                 "data-required"    => column.presence_required?,    |
-                "data-text-attr"   => column.option_text_attribute, |
+                "data-source"      => column.source,                |
                 "data-target"      => "#{column_name}_target_flag", |
-                "data-column"      => column.name,                  |
+                "data-field"       => field,                        |
                 :disabled          => column.options[:auto_fill]    |
 
             - elsif column.options[:choices].present?
@@ -47,8 +48,8 @@
                 :include_blank     => !column.presence_required?,    |
                 "data-required"    => column.presence_required?,     |
                 "data-target"      => "#{column_name}_target_flag",  |
-                "data-text-attr"   => column.option_text_attribute,  |
-                "data-column"      => column.name                    |
+                "data-source"      => column.source,                 |
+                "data-field"       => field                          |
               - if column.options[:depend_column].present?
                 :javascript
                   $(function(){
@@ -66,16 +67,16 @@
                   });
 
             - elsif column.options[:file]
-              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - elsif column.options[:password]
-              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 250px'
+              = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - else
               - if column.sql_type.to_s.downcase == 'boolean'
-                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name
+                = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field
               - elsif column.sql_type.to_s.downcase == 'text'
-                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-column" => column.name, :style => 'width: 260px; height: 4em;'
+                = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 260px; height: 4em;'
               - else
-                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-column" => column.name
+                = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
             .field_error
       .submit
         %input.btn.success{:id => "#{grid.name}_option_submit", :name => "commit", :type => "submit", :value => " Create "}/
