--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -48,7 +48,7 @@
                 :disabled          => column.options[:auto_fill]    |
               = clean_up_for(column)
 
-            - elsif select_tag_field?(column)
+            - elsif column.sql_type.to_s == 'has_one' || select_tag_field?(column)
               = select_tag "#{model_name}[#{column_name}]",          |
                 select_tag_options(column),                          |
                 :style             => "width:250px",                 |
@@ -82,7 +82,7 @@
                                      + "&grid=#{grid.class}"
                                      + "&klass=#{_klass}"
                                      + "&screen=#{screen.class}"
-                                     + "&text_attr=#{column_name}";
+                                     + "&source=#{column_name}";
                 var container = $(".auto-complete-text-field-#{column_name}");
                 var column = {
                   auto_complete: true,
