--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -18,7 +18,7 @@
             field = column.options[:through] || column.name
           .field{:name => column_name}
             %label{:for => "#{model_name}_#{column_name}"}= label
-            - if column.sql_type.to_s == 'belongs_to'
+            - if ['belongs_to', 'enum'].include?(column.sql_type.to_s)
               = form.select column_name,                                      |
                 select_options(column),                                       |
                 { include_blank: !column.presence_required? },                |
